test #39 Ready for testing, grid should now be correctly aligned at all times, also live while resizing thumbs

--- a/code/media/com_files/css/files-layout-icons.css
+++ b/code/media/com_files/css/files-layout-icons.css
@@ -18,9 +18,13 @@
     padding: 10px;
 }
 
+.files-node-shadow {
+float: left;
+    text-align: center;
+}
 div.imgOutline {
     cursor: pointer;
-	float: left;
+    display: inline-block;
 	border: 1px;
 
 	padding: 11px;
